k8s/clusterid-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ap1-svc
  namespace: app1
spec:
  selector: 
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
